--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,16 @@ install: "pip install -r requirements.txt"
 
 before_script: 
  
- - "flake8 --ignore=F403 app tests "
+- "flake8 --ignore=F403 app tests "
 
 # command to run tests
+
 script: 
  
- - nosetests --with-doctest --with-coverage -s app
+- nosetests --with-doctest --with-coverage -s app
 
 
+
+- lettuce tests/
+- coverage run --omit='*lettuce*,*fuzzywuzzy*' tests/features/steps.py
+- coverage report -m
